src/styles.css
html {
    font-family: 'Lato', sans-serif;
}

body {
    display: flex;
    justify-content: flex-start;
    margin: 0px;
}

.sidebar {
    width: 25%;
    background-color: #3D5A80;
}

.display-grid {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    background-color: #98c1d9;
    width: 100%;
}

.counterbox {
    margin: 20px;
    width: 20%;
    height: 70%;
    text-align: center;
}

.button-header {
    display: flex;
    justify-content: flex-start;
}

.date-input,
.date-input-button {
    margin: 12px;
    border-radius: 7px;
}

.date-input {
    height: 40px;
}

.date-input-button {
    height: 45px;
    width: 100px;
    border: 3px solid black;
    cursor: pointer;
    padding: 3px;  
}

.today-display,
.selected-date-display {
    display: flex;
    justify-content: flex-start;
}

.display {
 margin: 20px;
}

.display, 
.info-card, 
.compare-steps, 
.friends {
    padding: 8px;
    background-color: #e0fbfc;
    border: 3px solid #ee6c4d;
    border-radius: 7px;
    box-shadow: 5px 7px 7px 0px rgba(0,0,0,0.75);
}

.welcome-message {
    width: 100%;
    text-align: center;
    margin-top: 20px;
    font-size: 60px;
    margin-bottom: 0px;
}

.info-card, 
.compare-steps, 
.friends {
    margin: auto;
    width: 80%;
}

.app-name {
    text-shadow: 2px 2px #a8dadc;
    text-align: center;
    margin: 0px;
    margin-bottom: 24px;
    margin-top: 50px;
    width: 100%;
    font-size: 60px;
    color: #ee6c4d;
}

